internal/lsp/testdata/good/good0.go
package good //@diag("package", "no_diagnostics", "")

func stuff() { //@item(good_stuff, "stuff", "func()", "func")
	x := 5
	random2(x)
}
